<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/game_over_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_answer_view"
        android:background="@color/colorAccent"
        android:gravity="center">

        <TextView
            android:id="@+id/game_over_header_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over_header"
            android:textColor="@color/white"
            android:textSize="@dimen/game_over_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_answer_view"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:id="@+id/score_header_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_score"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/score_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/score_badge_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/spacing_large"
                android:layout_weight="0.22"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_score_ribbon" />

            <TextView
                android:id="@+id/user_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="@dimen/spacing_large"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/game_over_font_size"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/highScore_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center">


        <TextView
            android:id="@+id/highScore_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large"
            android:text="@string/game_high_score"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/menu_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_dialog_quit"
            android:theme="@style/PrimaryFlatButton"
            android:contentDescription="@string/exit_game_btn_msg"/>

        <Button
            android:id="@+id/revive_life_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_dialog_extra_lifeBtn"
            android:drawableEnd="@drawable/ic_play_button"
            android:drawablePadding="@dimen/margin_10"
            android:theme="@style/PrimaryFlatButton"
            android:contentDescription="@string/extra_life_btn_msg"/>
    </LinearLayout>


</LinearLayout>