<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:layout_margin="@dimen/spacing_large"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintVertical_bias="0.502"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/card_question_LV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/card_question_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/recycler_font_size" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <View style="@style/Divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/true_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/true_btn"
                    android:theme="@style/PrimaryFlatButton"
                    android:contentDescription="@string/true_btn_msg"/>

                <Button
                    android:id="@+id/false_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/false_btn"
                    android:theme="@style/PrimaryFlatButton"
                    android:contentDescription="@string/false_btn_msg"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_fact_LV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="1"
        >

        <LinearLayout
            android:id="@+id/answerIndicatorLV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_answer_view"
            android:background="@color/correctAnswer"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <TextView
                android:id="@+id/answerIndicator_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/menu_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:id="@+id/fact_header_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_large"
                android:text="@string/did_you_know_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/recycler_font_size" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/card_fact_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/spacing_large"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/recycler_font_size" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <View style="@style/Divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/continue_btn"
                    android:theme="@style/PrimaryFlatButton"
                    android:contentDescription="@string/continue_btn_msg"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>