<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.thinkinghats.isittrue.activity.GameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_56dp"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/categoryImage"
                android:layout_width="@dimen/spacing_56dp"
                android:layout_height="@dimen/spacing_56dp"
                android:scaleType="fitXY"
                android:transitionName="@string/transition_categoryImage" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_weight="3"
                android:elevation="1dp"
                android:gravity="center"
                android:text="Test"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/menu_font_size"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/card_question_recycleView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.515">

    </android.support.v7.widget.RecyclerView>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="180dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.515">

        <ImageView
            android:id="@+id/empty_list_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_no_connection"
            android:contentDescription="@string/no_internet_message"/>

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_list_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/spacing_large"
            android:text="@string/no_connection_errorMsg"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
